# TextFoundry

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  antora-playbook.yml  package-lock.json  package.json  vcpkg.json
.agents/skills/ml-llm-adr/: SKILL.md
.agents/skills/ml-llm-delivery-pipeline/: SKILL.md
.agents/skills/ml-llm-delivery-plan/: SKILL.md
.agents/skills/ml-llm-document-set/: SKILL.md
.agents/skills/ml-llm-evaluation-plan/: SKILL.md
.agents/skills/ml-llm-prd/: SKILL.md
.agents/skills/ml-llm-prompt-template/: SKILL.md
.agents/skills/ml-llm-runbook/: SKILL.md
.agents/skills/ml-llm-security-note/: SKILL.md
.agents/skills/ml-llm-service-spec/: SKILL.md
.agents/skills/ml-llm-system-design/: SKILL.md
.github/workflows/: ci.yml  pages.yml  rpm-fedora.yml
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
ML LLM Delivery Pipeline/: 01 PRD Template.md  02 System Design Doc Template.md  03 ADR Template.md  04 Service Spec Template.md  05 Evaluation Plan Template.md  06 Delivery Plan Template.md  07 Runbook Template.md  08 Security Note Template.md  09 Prompt Template.md  ML LLM Delivery Pipeline and Required Documents.md
cmake/: TextFoundryConfig.cmake.in
doc/: README-antora.adoc  antora.yml  backlog.md  doc.adoc  main.adoc  prd.adoc  release_checklist.md  spec-kit.adoc  status.adoc
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/assets/attachments/: textfoundry-intro-onepager.html
doc/modules/ROOT/pages/: api.adoc  index.adoc  prd.adoc  spec-kit.adoc  status.adoc
doc/modules/ROOT/pages/project/: devops.adoc  index.adoc  meetings-decisions.adoc  processes.adoc  testing-qa.adoc
doc/modules/ROOT/pages/project/about/: additional-info.adoc  estimates-risks.adoc  index.adoc  prd.adoc  product-presentation.adoc  requirements.adoc  user-story-map.adoc
doc/modules/ROOT/pages/project/architecture/: adr-build-vs-dspy.adoc  adr-python-integration-strategy.adoc  decisions.adoc  index.adoc  integrations.adoc  prompt-server-mvp-sync-strategy.adoc  prompt-server-sync-explainer.adoc  runtime-surface-capability-matrix.adoc  runtime-surfaces-roadmap.adoc  ui-ux.adoc
doc/modules/ROOT/pages/project/development/: backend.adoc  frontend.adoc  index.adoc
doc/modules/ROOT/pages/project/functions/: index.adoc  ml-llm-adr.adoc  ml-llm-delivery-plan.adoc  ml-llm-document-set.adoc  ml-llm-evaluation-plan.adoc  ml-llm-prd.adoc  ml-llm-prompt-template.adoc  ml-llm-runbook.adoc  ml-llm-security-note.adoc  (+2 more)
doc/ui/: ui.yml
doc/ui/css/: site.css
doc/ui/layouts/: default.hbs
doc/ui/partials/: nav-tree.hbs
examples/: CMakeLists.txt  advanced_example.cc  example_main.cc  ftxui_tabs_example.cc
packaging/: TextFoundry.iss
scripts/: sync_antora_docs.sh
src/text_foundry_cli/: CMakeLists.txt  application.cc  application.h  application_settings.h  applicationsettings.h  block_creation_controller.cc  block_creation_controller.h  main.cc  tui.cc  tui.h  ui_style.cc  ui_style.h
src/text_foundry_cli/tabs/: blocks_modal_view.cc  blocks_modal_view.h  blocks_tab.cc  compositions_tab.cc  render_tab.cc  settings_tab.cc  tab_header.h
src/text_foundry_engine/: CMakeLists.txt  block.cc  block.h  blockref.cc  blockref.h  engine.h  fragment.cc  fragment.h
src/text_foundry_gui/: CMakeLists.txt  main.cc
src/text_foundry_gui/app/: session_view_model.cc  session_view_model.h
src/text_foundry_gui/components/: svg_icon.cc  svg_icon.h  syntax_highlighter.cc  syntax_highlighter.h
src/text_foundry_gui/models/: blocks_model.cc  blocks_model.h
src/text_foundry_gui/qml/: Main.qml
src/text_foundry_gui/qml/Constants/: ColorPalette.qml  General.qml  Icons.qml  qmldir
src/text_foundry_gui/qml/components/: AppIcon.qml  BlockEditorWorkspace.qml  BlockSliceDialog.qml  CodePreview.qml  CompositionBlockRewriteDialog.qml  CompositionEditorSidebar.qml  CompositionEditorWindow.qml  CompositionFragmentCard.qml  DetailField.qml  DragHandle.qml  IconToolButton.qml  InfoCard.qml  SvgIcon.qml  SvgToolButton.qml  TagChip.qml
src/text_foundry_gui/qml/pages/: BlocksPage.qml  CompositionsPage.qml  RenderPage.qml  SettingsPage.qml
src/text_foundry_gui/resource/app/: app.rc
src/text_foundry_gui/viewmodels/: block_editor_view_model.cc  block_editor_view_model.h  block_slice_view_model.cc  block_slice_view_model.h  composition_block_rewrite_view_model.cc  composition_block_rewrite_view_model.h  composition_editor_view_model.cc  composition_editor_view_model.h  compositions_view_model.cc  compositions_view_model.h  render_view_model.cc  render_view_model.h
src/textfoundry_ai/: CMakeLists.txt  openai_compatible_block_generator.cc  openai_compatible_block_generator.h  openai_compatible_composition_block_rewriter.cc  openai_compatible_composition_block_rewriter.h  openai_compatible_normalizer.cc  openai_compatible_normalizer.h  prompt_constants.h  qt_http_transport.cc  qt_http_transport.h
src/textfoundry_engine/: CMakeLists.txt  block.cc  block.h  blockref.cc  blockref.h  blocktype.hpp  composition.cc  composition.h  database_scheme.fbs  database_scheme.obx.cpp  database_scheme.obx.hpp  engine.cc  engine.h  error.h  fragment.cc  fragment.h  logger.cc  logger.h  objectbox-model.h  objectbox-model.json  objectboxrepository.cc  objectboxrepository.h  objectboxstorage.cc  objectboxstorage.h  obx_utils.hpp  renderer.cc  renderer.h  repository_block_cache.cpp  repository_block_cache.h  version.h
src/textfoundry_engine/tf/: block.cc  block.h  block_generation.h  block_ref.cc  block_ref.h  block_type.hpp  blockref.cc  blockref.h  composition.cc  composition.h  database_scheme.fbs  database_scheme.obx.cpp  database_scheme.obx.hpp  engine.cc  engine.h  error.h  fragment.cc  fragment.h  logger.cc  logger.h  objectbox-model.h  objectbox-model.json  objectbox_repository.cc  objectbox_repository.h  objectboxrepository.cc  objectboxrepository.h  obx_utils.hpp  renderer.cc  renderer.h  repository_block_cache.cpp  repository_block_cache.h  types.h  version.h
tests/: CMakeLists.txt  test_main.cc
(+136 files in other folders)
